--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/michroma": "^5.0.20",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
